fix overflow, centralize phaser code in one place, housekeeping

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -36,7 +36,6 @@
 html,
 body {
   font-size: var(--root-font-size) !important;
-  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
